Apply review modifications: capitalization inline, switch to 'example data' in a few places (all would be a bit redundant), explain DataFrame & parquet

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "aab6f747-2286-4d25-834d-195c742e5b62",
+   "cell_type": "raw",
+   "id": "e2cecbeaa866569c",
    "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
@@ -11,12 +11,12 @@
     "\n",
     "# Working with Exasol Using the PyExasol Connector\n",
     "\n",
-    "In this notebook, we will show some basic operations on data using PyExasol. You can find more detailed information on using PyExasol in its [documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
+    "In this notebook, we will show some basic operations on example data using PyExasol. You can find more detailed information on using PyExasol in its [documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
     "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using:\n",
-    "* [Polars](https://pola.rs/) —  Polars is a lightning-fast DataFrame library for Python. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
-    "* [PyArrow](https://pola.rs/) —  PyArrow is a cross-language development platform for in-memory data. The [import_from_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_parquet) and [export_to_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_parquet) were introduced in PyExasol version `1.2.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
-    "* data on US flight delays — we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
+    "* [Polars](https://pola.rs/) —  Polars is a lightning-fast DataFrame library for Python. A DataFrame is a wo-dimensional data structure representing data as a table with rows and columns. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
+    "* [PyArrow](https://pola.rs/) —  PyArrow is a cross-language development platform for in-memory data. The [import_from_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_parquet) and [export_to_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_parquet) were introduced in PyExasol version `1.2.0` to allow users to quickly import & export their data into & from an Exasol Database to a parquet file. A parquet file is a highly compressed, high-speed storage for massive, spreadsheet-like data.\n",
+    "* Example data on US flight delays — we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. This data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
     "                                                                                                                                \n",
     "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how the PyExasol connector creates an important & flexible bridge between Python code and the Exasol Database, which can not only be leveraged in a specific case, like a project using Polars, but throughout a company's dynamic ecosystem, which may have various desired input and output formats.                                                                                                                          \n",
     "\n",
@@ -27,7 +27,7 @@
     "\n",
     "Please note:\n",
     "* AI Lab currently is shipped with PyExasol version `1.3.0`. \n",
-    "  * Functions for parquet and polars should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
+    "  * Functions for PyArrow's parquet and Polars's DataFrame should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
     "\n",
     "## 1. Setup\n",
     "\n",
@@ -90,7 +90,7 @@
    "id": "f78991ca-706f-44e3-af92-c78cdb70d50b",
    "metadata": {},
    "source": [
-    "We download a prepared flights file from an AWS S3 Bucket to our local filesystem and then we load and inspect the data with pyarrow."
+    "We download a prepared flights file from an AWS S3 Bucket to our local filesystem and then we load and inspect the data with PyArrow."
    ]
   },
   {
