--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -2,24 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2cecbeaa866569c",
+   "id": "85ad35fb-b662-4cb5-8db1-11d808bd6993",
    "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
-    "</div>\n",
-    "\n",
-    "# Working with Exasol Using the PyExasol Connector\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11c3f0d7-9149-4eae-a0d7-dc49a8e4fdc2",
+   "metadata": {},
+   "source": [
+    "# Working with Exasol Using the PyExasol Connector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64393876-08f4-446a-a73b-d28137adb2d4",
+   "metadata": {},
+   "source": [
     "In this notebook, we will show some basic operations on example data using PyExasol. You can find more detailed information on using PyExasol in its [documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
-    "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using:\n",
-    "* [Polars](https://pola.rs/) —  Polars is a lightning-fast DataFrame library for Python. A DataFrame is a wo-dimensional data structure representing data as a table with rows and columns. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
+    "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf272b9-c39a-4f2a-97a1-c153e3164af2",
+   "metadata": {},
+   "source": [
+    "* [Polars](https://pola.rs/) —  Polars is a lightning-fast DataFrame library for Python. A DataFrame is a two-dimensional data structure representing data as a table with rows and columns. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
     "* [PyArrow](https://pola.rs/) —  PyArrow is a cross-language development platform for in-memory data. The [import_from_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_parquet) and [export_to_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_parquet) were introduced in PyExasol version `1.2.0` to allow users to quickly import & export their data into & from an Exasol Database to a parquet file. A parquet file is a highly compressed, high-speed storage for massive, spreadsheet-like data.\n",
-    "* Example data on US flight delays — we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. This data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
-    "                                                                                                                                \n",
-    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how the PyExasol connector creates an important & flexible bridge between Python code and the Exasol Database, which can not only be leveraged in a specific case, like a project using Polars, but throughout a company's dynamic ecosystem, which may have various desired input and output formats.                                                                                                                          \n",
-    "\n",
+    "* Example data on US flight delays — we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. This data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a044ca7-1156-46d0-9fec-0531ee69534c",
+   "metadata": {},
+   "source": [
+    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how the PyExasol connector creates an important & flexible bridge between Python code and the Exasol Database, which can not only be leveraged in a specific case, like a project using Polars, but throughout a company's dynamic ecosystem, which may have various desired input and output formats. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a7b962-d71c-444a-98ec-3225f2d1be06",
+   "metadata": {},
+   "source": [
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
@@ -182,16 +213,7 @@
    "source": [
     "import polars as pl\n",
     "\n",
-    "polars_dataframe = pl.read_csv(airlines_csv_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d002880-86b4-411a-919d-808f272096a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "polars_dataframe = pl.read_csv(airlines_csv_file)\n",
     "polars_dataframe.schema"
    ]
   },
@@ -260,6 +282,7 @@
     "\n",
     "us_flights_ddl = f\"\"\"\n",
     "CREATE OR REPLACE TABLE {us_flights.as_string} (\n",
+    "  FLIGHT_ID DECIMAL(18,0) IDENTITY PRIMARY KEY,\n",
     "  FL_DATE TIMESTAMP, \n",
     "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
     "  ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
@@ -350,8 +373,10 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "columns = parquet_table.column_names\n",
+    "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.import_from_parquet(source=Path(flights_parquet_file), table=us_flights.as_tuple)"
+    "    conn.import_from_parquet(source=Path(flights_parquet_file), table=us_flights.as_tuple, import_params={\"columns\":columns})"
    ]
   },
   {
@@ -560,6 +585,7 @@
    "source": [
     "model_query = f\"\"\"\n",
     "SELECT\n",
+    "  FLIGHT_ID,\n",
     "  TO_CHAR(FL_DATE, 'D') AS day_of_week,\n",
     "  CASE \n",
     "        WHEN TO_CHAR(FL_DATE, 'D') IN ('6', '7') THEN TRUE \n",
@@ -567,11 +593,13 @@
     "    END AS is_weekend,\n",
     "  OP_CARRIER_AIRLINE_ID,\n",
     "  CAST(TO_CHAR(TO_TIMESTAMP(CRS_DEP_TIME, 'HH24MI'), 'HH24') AS INTEGER) AS CRS_DEP_HOUR,\n",
-    "  CAST(TO_CHAR(TO_TIMESTAMP(CRS_ARR_TIME, 'HH24MI'), 'HH24') AS INTEGER) AS CRS_ARR_HOUR,\n",
     "  ORIGIN_STATE_ABR,\n",
     "  DEST_STATE_ABR,\n",
     "  DISTANCE,\n",
-    "  ZEROIFNULL(CARRIER_DELAY) CARRIER_DELAY\n",
+    "  CASE\n",
+    "      WHEN ARR_DELAY > 0 THEN 1\n",
+    "      ELSE 0\n",
+    "  END AS was_delayed\n",
     "FROM AI_LAB.US_FLIGHTS\n",
     "  WHERE CANCELLED IS FALSE\n",
     "  AND DIVERTED IS FALSE\n",
@@ -592,6 +620,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35ef18cb-08b6-4e49-8d7e-f579a49e4bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dataframe.select(pl.col(\"WAS_DELAYED\").value_counts(sort=True))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "49abf35b-c195-43c4-95ff-bcbb1cb564ba",
    "metadata": {},
@@ -604,30 +642,48 @@
    "id": "63a34c03-0fc1-422f-b3d0-61382dd7e6d7",
    "metadata": {},
    "source": [
-    "First, we one-hot encode categorical values."
+    "This is a toy example of a machine learning model. It is not intended to be optimized or well-performing; many steps which you would expect in the preparation of a machine learning model were not done.\n",
+    "\n",
+    "First, we one-hot encode categorical values and scale large numerical values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57702e3c-44b3-4737-a67d-85ae050b1c49",
+   "id": "65adab50-bf15-4ed1-b3e0-d63b7ef2ce3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn import set_config\n",
     "\n",
-    "# Polars is not fully integrated into sklearn, so we switch to a Pandas DataFrame.\n",
-    "model_pandas = model_dataframe.to_pandas()\n",
+    "# Globally configure sklearn to return Polars DataFrames\n",
+    "set_config(transform_output=\"polars\")\n",
     "\n",
-    "# One-hot encode categorical values\n",
-    "model_pandas = pd.get_dummies(model_pandas, columns=['OP_CARRIER_AIRLINE_ID', 'ORIGIN_STATE_ABR', 'DEST_STATE_ABR'])\n",
+    "# Apply different transformations to different columns\n",
+    "cat_cols = ['OP_CARRIER_AIRLINE_ID', 'ORIGIN_STATE_ABR', 'DEST_STATE_ABR']\n",
+    "num_cols = ['DISTANCE']\n",
     "\n",
-    "model_pandas"
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('cat', OneHotEncoder(sparse_output=False), cat_cols),\n",
+    "        ('num', StandardScaler(), num_cols)  # Added scaling for DISTANCE\n",
+    "    ],\n",
+    "    remainder='passthrough',\n",
+    "    # This removes the prefixes like 'remainder__' and 'cat__'\n",
+    "    verbose_feature_names_out=False \n",
+    ")\n",
+    "\n",
+    "# Transform directly using the Polars DataFrame\n",
+    "model_polars = preprocessor.fit_transform(model_dataframe)\n",
+    "\n",
+    "model_polars.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebf680ae-d40e-4882-a0b3-5d5f41c6aae6",
+   "id": "b2dac1df-6b98-4110-84f2-e29c520b8fea",
    "metadata": {},
    "source": [
     "Next, we split the data into training and validation sets."
@@ -636,42 +692,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d8871af-f26f-4bdd-b128-5dcaa2983bd9",
+   "id": "82fc46db-1d61-4283-a6e9-2f0be5048f28",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X, y = model_pandas.drop(columns='CARRIER_DELAY'), model_pandas['CARRIER_DELAY']\n",
+    "X = model_polars.drop('WAS_DELAYED', 'FLIGHT_ID')\n",
+    "y = model_polars.select('WAS_DELAYED')\n",
+    "\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "884eb958-3984-4f97-bb06-778ec8be72d0",
+   "cell_type": "markdown",
+   "id": "ebf680ae-d40e-4882-a0b3-5d5f41c6aae6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn import linear_model\n",
-    "\n",
-    "reg = linear_model.Ridge(alpha=.5)\n",
-    "reg.fit(X_train, y_train)"
+    "Then, we train a random forest on the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf27293d-d387-47c1-a413-8ed52ebe3f05",
+   "metadata": {},
+   "source": [
+    "Finally, we evaluate how our model performed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f94497-6390-4b11-8d3f-27e2f67ddee0",
+   "id": "56d8f689-dc46-47ff-9941-34ca7e777959",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "pred_valid_lr= reg.predict(X_valid)\n",
+    "clf_model = LogisticRegression(solver='liblinear', random_state=42)\n",
     "\n",
-    "print(np.sqrt(mean_squared_error(y_valid, pred_valid_lr)))\n",
-    "print(r2_score(y_valid, pred_valid_lr))"
+    "clf_model.fit(X_train, y_train.to_series())\n",
+    "\n",
+    "pred_valid_clf = clf_model.predict(X_valid)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy_score(y_valid, pred_valid_clf):.2%}\")\n",
+    "print(classification_report(y_valid, pred_valid_clf))"
    ]
   },
   {
@@ -683,12 +749,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49049082-8bf6-4b52-9fdd-3326f0337998",
+   "metadata": {},
+   "source": [
+    "We run the machine learning model on all of our flight data and insert it into an Exasol Database table."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "91bf69c0-a46a-43f7-aad2-18075dc0db34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_preds = clf_model.predict(model_polars.drop('WAS_DELAYED', 'FLIGHT_ID'))\n",
+    "\n",
+    "final_df = model_polars.with_columns(\n",
+    "    pl.Series(\"WAS_DELAYED_PRED\", all_preds)\n",
+    ").select([\n",
+    "    \"FLIGHT_ID\",\n",
+    "    \"WAS_DELAYED\",\n",
+    "    \"WAS_DELAYED_PRED\"\n",
+    "])\n",
+    "\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29e32d81-f3bf-4120-adae-72bf4a889d79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_flights_model = TableInfo(table=\"US_FLIGHTS_MODEL\")\n",
+    "\n",
+    "us_flights_model_ddl = f\"\"\"\n",
+    "CREATE OR REPLACE TABLE {us_flights_model.as_string}(\n",
+    "    FLIGHT_ID DECIMAL(18,0) NOT NULL,\n",
+    "    WAS_DELAYED BOOLEAN,\n",
+    "    WAS_DELAYED_PRED BOOLEAN,\n",
+    "    CONSTRAINT fk_flight_id\n",
+    "        FOREIGN KEY (FLIGHT_ID) \n",
+    "        REFERENCES {us_flights.as_string} (FLIGHT_ID)\n",
+    ")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3293dc16-f6d7-447c-8479-68e27eb177ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    conn.execute(us_flights_model_ddl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a4bdb5-b45e-4a1a-ac3d-d0dff9489fd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    conn.import_from_polars(\n",
+    "        src=final_df,\n",
+    "        table=us_flights_model.as_tuple\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0dcf459-0ca2-4864-97b0-055915265544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    df = conn.export_to_pandas(us_flights_model.as_tuple)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
