Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "This notebook shows basic operations on example data using PyExasol. For more details, see also the [PyExasol documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
-    "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using:"
+    "Organized as a quickstart tutorial, the notebook looks the flexibility and ease by which PyExasol allows importing data into and exporting data from an Exasol database. The notebbook also shows how to transform data both in Python and within the database. The tutorial uses Polars, PyArrow and example data on US flight delays:"
    ]
   },
   {
