Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -43,7 +43,7 @@
    "id": "3a044ca7-1156-46d0-9fec-0531ee69534c",
    "metadata": {},
    "source": [
-    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how the PyExasol connector creates an important & flexible bridge between Python code and the Exasol Database, which can not only be leveraged in a specific case, like a project using Polars, but throughout a company's dynamic ecosystem, which may have various desired input and output formats. "
+    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how PyExasol creates a versatile & flexible bridge between Python code and the Exasol Database. Beyond specific use cases, like a project using Polars, this can leverage dynamic ecosystems with multiple input and output formats typical for real companies."
    ]
   },
   {
