Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "Please note:\n",
     "* AI Lab currently is shipped with PyExasol version `1.3.0`. \n",
-    "  * Functions for PyArrow's parquet and Polars's DataFrame should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
+    "* Functions for PyArrow's parquet and Polars's DataFrame should work for all supported database versions, as data is converted into streamed CSVs before executing SQL statements `IMPORT` or `EXPORT`.\n",
     "\n",
     "## 1. Setup\n",
     "\n",
