Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -121,7 +121,7 @@
    "id": "f78991ca-706f-44e3-af92-c78cdb70d50b",
    "metadata": {},
    "source": [
-    "We download a prepared flights file from an AWS S3 Bucket to our local filesystem and then we load and inspect the data with PyArrow."
+    "In this section we download a prepared file from an AWS S3 Bucket to our local filesystem. The file contains data on US flight delays. After that, we load and inspect the data with PyArrow."
    ]
   },
   {
