Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -201,7 +201,7 @@
    "id": "decea784-2358-417f-9e08-855f006d5688",
    "metadata": {},
    "source": [
-    "Let's take a look at the contents on this file."
+    "Let's take a look at the contents of this file."
    ]
   },
   {
