Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -177,8 +177,7 @@
    "metadata": {},
    "source": [
     "#### 1.2.2 Download CVS File from Remote Filesystem & Inspect with Polars\n",
-    "This section demonstrates how to download a CSV file from a remote source.\n",
-    "The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
+    "This section demonstrates how to download a CSV file from a remote source."
    ]
   },
   {
