Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -233,7 +233,7 @@
    "source": [
     "### 1.3 Create Tables\n",
     "\n",
-    "We will start by creating empty tables for storing the flight delay data."
+    "For importing the data into Exasol, we will start by creating empty tables."
    ]
   },
   {
