Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -358,7 +358,7 @@
    "source": [
     "## 2. Roundtrip with Parquet\n",
     "\n",
-    "### 2.1 Importing Parquet Data from a Local Filesystem\n",
+    "### 2.1 Importing Parquet Data from the Local Filesystem\n",
     "\n",
     "This section demonstrates how to import a parquet file from a local source into the database using PyExasol.\n"
    ]
