Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -328,7 +328,7 @@
    "source": [
     "### 1.4 Import Airline Information from CSV with PyExasol\n",
     "\n",
-    "We use PyExasol's import_from_file to import the CSV into the US_AIRLINES table."
+    "We use PyExasol's `import_from_file` to import the CSV into the `US_AIRLINES` table."
    ]
   },
   {
