Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -453,8 +453,8 @@
     "#### 2.3.1 Save One File without Additional callback_params \n",
     "\n",
     "This code will save all of the data for the query into 1 parquet file, \n",
-    "but as `callback_params={\"existing_data_behavior\":...}` was not changed, if you re-run this cell without deleting the directory, \n",
-    "**you will get an exception**:\n",
+    "Please note: When executing this cell more than once without deleting the directory, **you will get an exception**.\n",
+    "This is because, `callback_params={\"existing_data_behavior\":...}` was not changed:\n",
     "\n",
     "```python\n",
     "ValueError: 'highest_delay' contains existing files and `callback_params['existing_data_behavior']` is not one of these values: ('overwrite_or_ignore', 'delete_matching').\n",
