Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -450,7 +450,7 @@
    "id": "ae2f326c-0839-449a-9d85-180e9d18e2c1",
    "metadata": {},
    "source": [
-    "#### 2.3.1 Save One File without Additional callback_params \n",
+    "#### 2.3.1 Save One File Without Additional `callback_params` \n",
     "\n",
     "This code will save all of the data for the query into 1 parquet file, \n",
     "Please note: When executing this cell more than once without deleting the directory, **you will get an exception**.\n",
