Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -482,9 +482,8 @@
    "source": [
     "#### 2.3.2 Repeatedly Save One File with callback_params[\"existing_data_behavior\"]=\"overwrite_or_ignore\"\n",
     "\n",
-    "This code will save all of the data for the query into 1 parquet file and overwrite any existing & matching parquet filename.<br>\n",
-    "This is due to: `callback_params[\"existing_data_behavior\"] = \"overwrite_or_ignore\"`.<br>\n",
-    "**This allows the cell to be executed multiple times, unlike in 2.3.1.**\n",
+    "`callback_params[\"existing_data_behavior\"] = \"overwrite_or_ignore\"` will save all of the data for the query into 1 parquet file and overwrite any existing matching parquet file.\n",
+    "**This allows executing the cell executed multiple times, unlike section 2.3.1.**\n",
     "\n",
     "\n",
     "`existing_data_behavior` can be set to:\n",
