Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -480,7 +480,7 @@
    "id": "a7a36371-e369-4ec6-abab-3990eb8db479",
    "metadata": {},
    "source": [
-    "#### 2.3.2 Repeatedly Save One File with callback_params[\"existing_data_behavior\"]=\"overwrite_or_ignore\"\n",
+    "#### 2.3.2 Repeatedly Saving a File With Overwriting\n",
     "\n",
     "`callback_params[\"existing_data_behavior\"] = \"overwrite_or_ignore\"` will save all of the data for the query into 1 parquet file and overwrite any existing matching parquet file.\n",
     "**This allows executing the cell executed multiple times, unlike section 2.3.1.**\n",
