--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -489,7 +489,7 @@
     "`existing_data_behavior` can be set to:\n",
     "> * `error` (default value) raises an error if **any** data exists in the destination.\n",
     "\n",
-    "> * `overwrite_or_ignore` will ignore any existing data and will overwrite files with the same name as an output file. Other existing files will be ignored. This behavior, in combination with a unique basename_template for each write, will allow for an append workflow                                                                                                                                                             \n",
+    "> * `overwrite_or_ignore` ignores any existing data and overwrites files with the same name as an output file. Other existing files are ignored. This behavior, in combination with a unique basename_template for each write, allows for an append workflow.\n",
     "                                                                                                                                                                > * `delete_matching` is useful when you are writing a partitioned dataset. The first time each partition directory is encountered the entire directory will be deleted. This allows you to overwrite old partitions completely."
    ]
   },
