Apply suggestion from @ckunki
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -640,7 +640,7 @@
    "id": "63a34c03-0fc1-422f-b3d0-61382dd7e6d7",
    "metadata": {},
    "source": [
-    "This is a toy example of a machine learning model. It is not intended to be optimized or well-performing; many steps which you would expect in the preparation of a machine learning model were not done.\n",
+    "This is a toy example of a machine learning model. It is not intended to be optimized or well-performing. The example also omits many steps which you would expect in the preparation of a machine learning model.\n",
     "\n",
     "First, we one-hot encode categorical values and scale large numerical values."
    ]
