--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "This notebook shows basic operations on example data using PyExasol. For more details, see also the [PyExasol documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
-    "Organized as a quickstart tutorial, the notebook looks the flexibility and ease by which PyExasol allows importing data into and exporting data from an Exasol database. The notebbook also shows how to transform data both in Python and within the database. The tutorial uses Polars, PyArrow and example data on US flight delays:"
+    "Organized as a quickstart tutorial, the notebook highlights the flexibility and ease by which PyExasol allows importing data into and exporting data from an Exasol database. The notebook also shows how to transform data both in Python and within the database. The tutorial uses Polars, PyArrow, and example data on US flight delays."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "* [Polars](https://pola.rs/) is a lightning-fast DataFrame library for Python. A DataFrame is a two-dimensional data structure representing data as a table with rows and columns. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` allowing users to quickly import & export their data into & from an Exasol Database.\n",
     "* [PyArrow](https://pola.rs/) is a cross-language development platform for in-memory data. The [import_from_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_parquet) and [export_to_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_parquet) were introduced in PyExasol version `1.2.0` to allow users to quickly import & export their data into & from an Exasol Database to a parquet file. A parquet file is a highly compressed, high-speed storage for massive, spreadsheet-like data.\n",
-    "* The example data on US flight delays is used to explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. This data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
+    "* The example data on US flight delays is used to explore the delay caused by the carrier.This data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
    ]
   },
   {
@@ -43,7 +43,7 @@
    "id": "3a044ca7-1156-46d0-9fec-0531ee69534c",
    "metadata": {},
    "source": [
-    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how PyExasol creates a versatile & flexible bridge between Python code and the Exasol Database. Beyond specific use cases, like a project using Polars, this can leverage dynamic ecosystems with multiple input and output formats typical for real companies."
+    "We will use both the import and export functionalities of Polars & PyArrow in a a roundtrip manner with the data on US flight delays to illustrate how PyExasol creates a versatile & flexible bridge between Python code and the Exasol Database. Beyond specific use cases, like a project using Polars, this can leverage dynamic ecosystems with multiple input and output formats typical for real companies."
    ]
   },
   {
@@ -144,7 +144,7 @@
    "id": "6eceb4bd-ff93-4147-aeac-e9b91a223e42",
    "metadata": {},
    "source": [
-    "Let's take a look at the contents on this file."
+    "Let's take a look at the contents of this file."
    ]
   },
   {
@@ -454,7 +454,7 @@
     "\n",
     "This code will save all of the data for the query into 1 parquet file, \n",
     "Please note: When executing this cell more than once without deleting the directory, **you will get an exception**.\n",
-    "This is because, `callback_params={\"existing_data_behavior\":...}` was not changed:\n",
+    "This is because `callback_params={\"existing_data_behavior\":...}` was not changed (and the default behavior is to not overwrite files)\n",
     "\n",
     "```python\n",
     "ValueError: 'highest_delay' contains existing files and `callback_params['existing_data_behavior']` is not one of these values: ('overwrite_or_ignore', 'delete_matching').\n",
@@ -513,7 +513,7 @@
    "id": "c6dd019e-b58c-4646-ba8e-5b79edbf1f23",
    "metadata": {},
    "source": [
-    "#### 2.3.3 Save Multiple Files with callback_params[\"max_rows_per_file\"]=5"
+    "#### 2.3.3 Save into Multiple Files"
    ]
   },
   {
@@ -521,11 +521,11 @@
    "id": "a82c33be-2204-4bc8-8b9f-2873529d976e",
    "metadata": {},
    "source": [
-    "This code will save all of the data for the query into 3 parquet files and overwrite any existing & matching parquet filename.<br>\n",
-    "The saving into multiple files comes from: `callback[\"max_rows_per_file\"]=5` and `callback[\"max_rows_per_group\"]=5` <br>\n",
+    "This code will save all of the data for the query into diferent parquet files and overwrite any existing & matching parquet filename.<br>\n",
+    "The saving into multiple files comes from: `callback[\"max_rows_per_file\"]=5` and `callback[\"max_rows_per_group\"]=5`.<br>\n",
     "This overwriting behavior is due to: `callback_params[\"existing_data_behavior\"] = \"overwrite_or_ignore\"`. \n",
     "\n",
-    "**Note:** If ``max_rows_per_file`` is altered, ensure that ``max_rows_per_group`` is set to a value less than or equal to the value of ``max_rows_per_file``."
+    "**Note:** If ``max_rows_per_file`` is altered, ensure that ``max_rows_per_group`` is set to a value less than or equal to the value of ``max_rows_per_file``. Both values msut be set for this command to work as desired. Please refer to PyArrow's documentation for more information."
    ]
   },
   {
@@ -704,18 +704,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf680ae-d40e-4882-a0b3-5d5f41c6aae6",
-   "metadata": {},
-   "source": [
-    "Then, we train a random forest on the data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cf27293d-d387-47c1-a413-8ed52ebe3f05",
    "metadata": {},
    "source": [
-    "Finally, we evaluate how our model performed."
+    "Finally, we train our model and then evaluate how it performed."
    ]
   },
   {
@@ -729,7 +721,6 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "clf_model = LogisticRegression(solver='liblinear', random_state=42)\n",
-    "\n",
     "clf_model.fit(X_train, y_train.to_series())\n",
     "\n",
     "pred_valid_clf = clf_model.predict(X_valid)\n",
