--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -256,7 +256,7 @@
     "\n",
     "    @property\n",
     "    def as_string(self):\n",
-    "        \"\"\"The format format is important for completed queries sent to PyExasol\"\"\"\n",
+    "        \"\"\"This format is important for completed queries sent to PyExasol\"\"\"\n",
     "        return f\"{self.schema}.{self.table}\"\n",
     "        "
    ]
@@ -521,11 +521,11 @@
    "id": "a82c33be-2204-4bc8-8b9f-2873529d976e",
    "metadata": {},
    "source": [
-    "This code will save all of the data for the query into diferent parquet files and overwrite any existing & matching parquet filename.<br>\n",
+    "This code will save the data for the query into different parquet files and overwrite any existing & matching parquet filename.<br>\n",
     "The saving into multiple files comes from: `callback[\"max_rows_per_file\"]=5` and `callback[\"max_rows_per_group\"]=5`.<br>\n",
     "This overwriting behavior is due to: `callback_params[\"existing_data_behavior\"] = \"overwrite_or_ignore\"`. \n",
     "\n",
-    "**Note:** If ``max_rows_per_file`` is altered, ensure that ``max_rows_per_group`` is set to a value less than or equal to the value of ``max_rows_per_file``. Both values msut be set for this command to work as desired. Please refer to PyArrow's documentation for more information."
+    "**Note:** If ``max_rows_per_file`` is altered, ensure that ``max_rows_per_group`` is set to a value less than or equal to the value of ``max_rows_per_file``. Both values must be set for this command to work as desired. Please refer to PyArrow's documentation for more information."
    ]
   },
   {
@@ -542,7 +542,7 @@
     "        callback_params={\n",
     "            \"existing_data_behavior\": \"overwrite_or_ignore\",\n",
     "            \"max_rows_per_file\": 5,\n",
-    "            \"max_rows_per_group\": 5\n",
+    "            \"max_rows_per_group\": 5,\n",
     "        }\n",
     "    )"
    ]
